[project]
name = "justrl-train"
version = "0.1.0"
dependencies = [
    "trl>=0.12.0",
    "transformers>=4.48.0",
    "accelerate>=1.2.0",
    "peft>=0.14.0",
    "datasets>=3.0.0",
    "bitsandbytes>=0.45.0",
    "flash-attn>=2.7.0",
    "wandb",
    "sentencepiece",
    "protobuf",
    "torch>=2.4.0",
]

[tool.uv]
# 1. Install torch first so it's available for flash-attn to build
# 2. Disable build isolation only for flash-attn
no-build-isolation-package = ["flash-attn"]