[project]
name = "JustRL-Train"
version = "0.1.0"
description = "Reasoning model training using JustRL, TRL, and vLLM on 4x A10Gs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "trl[vllm]>=0.12.1",
    "vllm>=0.6.3",
    "deepspeed>=0.18.3",
    "accelerate>=1.1.0",
    "datasets>=3.0.0",
    "wandb>=0.18.0",
    "flash-attn>=2.6.0",
    "ninja",
    "hjson",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "htop",
    "nvtop",
]

[tool.uv.pip]
# Ensures we use the local virtual environment strictly
no-cache = false